tests/comp/sem/valid/thisref.mj
class A {

	public boolean field;

	public void test() {
		this.field;
		field;
	}

	public static void main(String[] args) {
	}

}
