tests/comp/sem/invalid/main_not_unique-2.mj
class Test {
	/*** public static void wrong(String[] args) { } ***/
	public static void main(String[] args) { }
}
